--- a/music.html
+++ b/music.html
@@ -2,47 +2,99 @@
 layout: default
 title: BillyReisinger.com
 ---
+<style>
+  h3 {
+    background-color: #eee;
+    padding: 10px;
+  }
+  h4 {
+    border-bottom: 1px solid #eee;
+    margin-top: 30px;
+  }
+  .piece p, .album p {
+    font-size: 0.8em;
+  }
+  .piece a, .album a {
+    margin: 0px 0px 0px 10px;
+  }
+</style>
 <div class='container'>
-  <div class='col-md-4'>
-  
+  <div class='col-md-12'>
     <h3>Compositions</h3>
-    <p>Theme From a Lonely Planet (for Symphony Orchestra) - 3001</p>
-    <p>Pacific Dream Sequence (3001)</p>
-    <p>Rondo for Rodent and Computer (3003)</p>
-    <a href='music/rfrac/rfrac.mov'>rfrac.mov</a>
-    <p>Streetscapes for Solo Piano (3003)</p>
-    <p>String Quartet (3000)</p>
+    <p>Below are some recordings of pieces of music that I have written for classical musicians.</p>
+    <div class="piece">
+        <h4>Theme From a Lonely Planet (for Symphony Orchestra) - 2001</h4>
+        <p>A 10-minute work for Symphony Orchestra, featuring prominent passages for solo violin.</p>
+        <a href="music/Murai_PSO/01 Theme From A Lonely Planet.mp3">Theme From a Lonely Planet</a>
+    </div>
+    <div class="piece">
+        <h4>Pacific Dream Sequence (2001)</h4>
+    </div>
+    <div class="piece">
+        <h4>Rondo for Rodent and Computer (2003)</h4>
+        <a href='music/rfrac/rfrac.mov'>rfrac.mov</a>
+    </div>
+    <div class="piece">
+        <h4>Streetscapes for Solo Piano (2003)</h4>
+    </div>
+    <div class="piece">
+        <h4>String Quartet (2000)</h4>
+    </div>
   </div>
-  <div class="col-md-4">
+  <div class="col-md-12">
     <h3>Cosmic Arc</h3>
-    <p>Jimmy's Club, 5/11/1998</p>
-    <p>Miscellaneous</p>
-    <a href='music/CosmicArc/Misc/crowbar.mp3'>crowbar.mp3</a>
-    <a href='music/CosmicArc/Misc/incaseoffire.mp3'>incaseoffire.mp3</a>
-    <a href='music/CosmicArc/Misc/lemons.mp3'>lemons.mp3</a>
-    <a href='music/CosmicArc/Misc/lemons_cac.mp3'>lemons_cac.mp3</a>
-    <a href='music/CosmicArc/Misc/mymanisgone.mp3'>mymanisgone.mp3</a>
-    <a href='music/CosmicArc/Misc/restless.mp3'>restless.mp3</a>
-    <a href='music/CosmicArc/Misc/sharleena.mp3'>sharleena.mp3</a>
-    <a href='music/CosmicArc/Misc/theskyiscrying.mp3'>theskyiscrying.mp3</a>
-    <a href='music/CosmicArc/Misc/voodoo.mp3'>voodoo.mp3</a>
-    <p>Why Bother?</p>
-    <a href='music/CosmicArc/Why_Bother/crowbar.mp3'>crowbar.mp3</a>
-    <a href='music/CosmicArc/Why_Bother/in_case_of_fire.mp3'>in_case_of_fire.mp3</a>
-    <a href='music/CosmicArc/Why_Bother/prelude.mp3'>prelude.mp3</a>
-    <a href='music/CosmicArc/Why_Bother/quasar.mp3'>quasar.mp3</a>
-    <a href='music/CosmicArc/Why_Bother/scotch_and_milk.mp3'>scotch_and_milk.mp3</a>
-    <a href='music/CosmicArc/Why_Bother/untitled.mp3'>untitled.mp3</a>
+    <p>
+       Cosmic Arc was a jazz-fusion / funk / blues band active in New Orleans, Louisiana, USA from 1997 to 2001.  
+       The band had a small local following and played countless shows. The members consisted of
+       John Shaffer (guitar), Billy Reisinger (guitar), Jon Stonbely (bass guitar), Jason Isaac (drums),
+       Sean Lynch (drums), Chuk Barber (percussion), and Becca Fuchs (vocals) - but not necessarily 
+       all at once.
+    </p>
+    <div class="album">
+        <h4>Jimmy's Club, 5/11/1998</h4>
+        <p><a href='music/CosmicArc/Jimmys 5-11-1998/crowbar.mp3'>Crowbar</a></p>
+        <p><a href='music/CosmicArc/Jimmys 5-11-1998/in_case_of_fire.mp3'>In Case Of Fire</a></p>
+        <p><a href='music/CosmicArc/Jimmys 5-11-1998/my_shoes.mp3'>My Shoes</a></p>
+        <p><a href='music/CosmicArc/Jimmys 5-11-1998/nightmare.mp3'>Nightmare</a></p>
+        <p><a href='music/CosmicArc/Jimmys 5-11-1998/quasar.mp3'>Quasar</a></p>
+        <p><a href='music/CosmicArc/Jimmys 5-11-1998/scotch_and_milk.mp3'>Scotch And Milk</a></p>
+        <p><a href='music/CosmicArc/Jimmys 5-11-1998/what_id_do_for_a_pretty_face.mp3'>What I'd Do For a Pretty Face</a></p>
+        <p><a href='music/CosmicArc/Jimmys 5-11-1998/youre_really_not_that_interesting_1.mp'>You're Really Not That Interesting</a></p>
+    </div>
+    <div class="album">
+        <h4>Miscellaneous</h4>
+        <p><a href='music/CosmicArc/Misc/crowbar.mp3'>Crowbar</a></p>
+        <p><a href='music/CosmicArc/Misc/incaseoffire.mp3'>In Case Of Fire</a></p>
+        <p><a href='music/CosmicArc/Misc/lemons.mp3'>Lemons</a></p>
+        <p><a href='music/CosmicArc/Misc/lemons_cac.mp3'>Lemons (at the CAC)</a></p>
+        <p><a href='music/CosmicArc/Misc/mymanisgone.mp3'>My Man Is Gone</a></p>
+        <p><a href='music/CosmicArc/Misc/restless.mp3'>Restless</a></p>
+        <p><a href='music/CosmicArc/Misc/sharleena.mp3'>Sharleena</a></p>
+        <p><a href='music/CosmicArc/Misc/theskyiscrying.mp3'>The Sky Is Crying</a></p>
+        <p><a href='music/CosmicArc/Misc/voodoo.mp3'>Voodoo</a></p>
+    </div>
+    <div class="album">
+        <h4>Why Bother?</h4>
+        <p><a href='music/CosmicArc/Why_Bother/crowbar.mp3'>crowbar</a></p>
+        <p><a href='music/CosmicArc/Why_Bother/in_case_of_fire.mp3'>in_case_of_fire</a></p>
+        <p><a href='music/CosmicArc/Why_Bother/prelude.mp3'>prelude</a></p>
+        <p><a href='music/CosmicArc/Why_Bother/quasar.mp3'>quasar</a></p>
+        <p><a href='music/CosmicArc/Why_Bother/scotch_and_milk.mp3'>scotch_and_milk</a></p>
+        <p><a href='music/CosmicArc/Why_Bother/untitled.mp3'>untitled</a></p>
+    </div>
   </div>
-  <div class="col-md-4">
+  <div class="col-md-12">
     <h3>Uphill Driver</h3>
-    <p>Self-titled album</p>
-    <a href='music/UphillDriver/BrokenDown.mp3'>BrokenDown.mp3</a>
-    <a href='music/UphillDriver/DrinkforaDream.mp3'>DrinkforaDream.mp3</a>
-    <a href='music/UphillDriver/FallOut.mp3'>FallOut.mp3</a>
-    <a href='music/UphillDriver/OnABend.mp3'>OnABend.mp3</a>
-    <a href='music/UphillDriver/she_told_me_too.mp3'>she_told_me_too.mp3</a>
-    <a href='music/UphillDriver/TheWorstWay.mp3'>TheWorstWay.mp3</a>
-    <a href='music/UphillDriver/untitled.mp3'>untitled.mp3</a>
+    <p>Uphill Driver was an Alt-Country / Alternative band featuring Casey Cichowicz, Tam Rankin, and Billy Reisinger.</p>
+    <div class="album">
+        <h4>Self-titled album</h4>
+        <p><a href='music/UphillDriver/BrokenDown.mp3'>Broken Down</a></p>
+        <p><a href='music/UphillDriver/DrinkforaDream.mp3'>Drink for a Dream</a></p>
+        <p><a href='music/UphillDriver/FallOut.mp3'>Fall Out</a></p>
+        <p><a href='music/UphillDriver/OnABend.mp3'>On A Bend</a></p>
+        <p><a href='music/UphillDriver/she_told_me_too.mp3'>She Told Me Too</a></p>
+        <p><a href='music/UphillDriver/TheWorstWay.mp3'>The Worst Way</a></p>
+        <p><a href='music/UphillDriver/untitled.mp3'>Untitled</a></p>
+    </div>
   </div>
 </div>
