fix typo in url

--- a/music.html
+++ b/music.html
@@ -59,7 +59,7 @@ title: BillyReisinger.com
         <p><a href='music/CosmicArc/Jimmys 5-11-1998/quasar.mp3'>Quasar</a></p>
         <p><a href='music/CosmicArc/Jimmys 5-11-1998/scotch_and_milk.mp3'>Scotch And Milk</a></p>
         <p><a href='music/CosmicArc/Jimmys 5-11-1998/what_id_do_for_a_pretty_face.mp3'>What I'd Do For a Pretty Face</a></p>
-        <p><a href='music/CosmicArc/Jimmys 5-11-1998/youre_really_not_that_interesting_1.mp'>You're Really Not That Interesting</a></p>
+        <p><a href='music/CosmicArc/Jimmys 5-11-1998/youre_really_not_that_interesting_1.mp3'>You're Really Not That Interesting</a></p>
     </div>
     <div class="album">
         <h4>Miscellaneous</h4>
