remove dead links

--- a/pizzas/10_mozzarella_bell_peppers_tomatoes_and_kala.html
+++ b/pizzas/10_mozzarella_bell_peppers_tomatoes_and_kala.html
@@ -16,16 +16,16 @@ title: Mozzarella, bell peppers, tomatoes, and kalamata olives with garlic butte
           <h4>Ingredients</h4>
           <ul>
 <li>
-              <a href="/ingredients/25_bell_peppers.html">Bell peppers</a>
+              Bell peppers
             </li>
             <li>
-              <a href="/ingredients/4_kalamata_olives.html">Kalamata olives</a>
+              Kalamata olives
             </li>
             <li>
-              <a href="/ingredients/20_mozzarella.html">Mozzarella</a>
+              Mozzarella
             </li>
             <li>
-              <a href="/ingredients/3_tomatoes.html">Tomatoes</a>
+              Tomatoes
             </li>
           </ul>
 <h4>Description</h4>
