--- a/pizzas/11_mozzarella_yellow_bell_peppers_red_onions.html
+++ b/pizzas/11_mozzarella_yellow_bell_peppers_red_onions.html
@@ -16,19 +16,19 @@ title: Mozzarella, yellow bell peppers, red onions, tomatoes, and capers with ma
           <h4>Ingredients</h4>
           <ul>
 <li>
-              <a href="/ingredients/27_capers.html">Capers</a>
+              Capers
             </li>
             <li>
-              <a href="/ingredients/20_mozzarella.html">Mozzarella</a>
+              Mozzarella
             </li>
             <li>
-              <a href="/ingredients/8_red_onions.html">Red onions</a>
+              Red onions
             </li>
             <li>
-              <a href="/ingredients/3_tomatoes.html">Tomatoes</a>
+              Tomatoes
             </li>
             <li>
-              <a href="/ingredients/26_yellow_bell_peppers.html">Yellow bell peppers</a>
+              Yellow bell peppers
             </li>
           </ul>
 <h4>Description</h4>
