--- a/pizzas/13_fresh_basil_mozzarella_bell_peppers_tomat.html
+++ b/pizzas/13_fresh_basil_mozzarella_bell_peppers_tomat.html
@@ -16,19 +16,19 @@ title: Fresh basil, mozzarella, bell peppers, tomatoes, and kalamata olives with
           <h4>Ingredients</h4>
           <ul>
 <li>
-              <a href="/ingredients/25_bell_peppers.html">Bell peppers</a>
+              Bell peppers
             </li>
             <li>
-              <a href="/ingredients/29_fresh_basil.html">Fresh basil</a>
+              Fresh basil
             </li>
             <li>
-              <a href="/ingredients/4_kalamata_olives.html">Kalamata olives</a>
+              Kalamata olives
             </li>
             <li>
-              <a href="/ingredients/20_mozzarella.html">Mozzarella</a>
+              Mozzarella
             </li>
             <li>
-              <a href="/ingredients/3_tomatoes.html">Tomatoes</a>
+              Tomatoes
             </li>
           </ul>
 <h4>Description</h4>
