--- a/pizzas/15_mozzarella_red_onions_green_bell_peppers_.html
+++ b/pizzas/15_mozzarella_red_onions_green_bell_peppers_.html
@@ -16,16 +16,16 @@ title: Mozzarella, red onions, green bell peppers, and pepperoni with marinara
           <h4>Ingredients</h4>
           <ul>
 <li>
-              <a href="/ingredients/2_green_bell_peppers.html">Green bell peppers</a>
+              Green bell peppers
             </li>
             <li>
-              <a href="/ingredients/20_mozzarella.html">Mozzarella</a>
+              Mozzarella
             </li>
             <li>
-              <a href="/ingredients/30_pepperoni.html">Pepperoni</a>
+              Pepperoni
             </li>
             <li>
-              <a href="/ingredients/8_red_onions.html">Red onions</a>
+              Red onions
             </li>
           </ul>
 <h4>Description</h4>
