--- a/pizzas/17_fresh_basil_mozzarella_grilled_chicken_re.html
+++ b/pizzas/17_fresh_basil_mozzarella_grilled_chicken_re.html
@@ -16,22 +16,22 @@ title: Fresh basil, mozzarella, grilled chicken, red onions, green bell peppers,
           <h4>Ingredients</h4>
           <ul>
 <li>
-              <a href="/ingredients/29_fresh_basil.html">Fresh basil</a>
+              Fresh basil
             </li>
             <li>
-              <a href="/ingredients/2_green_bell_peppers.html">Green bell peppers</a>
+              Green bell peppers
             </li>
             <li>
-              <a href="/ingredients/1_grilled_chicken.html">Grilled chicken</a>
+              Grilled chicken
             </li>
             <li>
-              <a href="/ingredients/20_mozzarella.html">Mozzarella</a>
+              Mozzarella
             </li>
             <li>
-              <a href="/ingredients/8_red_onions.html">Red onions</a>
+              Red onions
             </li>
             <li>
-              <a href="/ingredients/21_roasted_red_peppers.html">Roasted red peppers</a>
+              Roasted red peppers
             </li>
           </ul>
 <h4>Description</h4>
