--- a/pizzas/19_fresh_basil_fresh_mozzarella.html
+++ b/pizzas/19_fresh_basil_fresh_mozzarella.html
@@ -16,10 +16,10 @@ title: Fresh basil and fresh mozzarella with marinara
   <h4>Ingredients</h4>
   <ul>
 <li>
-      <a href="/ingredients/29_fresh_basil.html">Fresh basil</a>
+      Fresh basil
     </li>
     <li>
-      <a href="/ingredients/33_fresh_mozzarella.html">Fresh mozzarella</a>
+      Fresh mozzarella
     </li>
   </ul>
 <h4>Description</h4>
