--- a/pizzas/1_grilled_chicken_green_bell_peppers_tomato.html
+++ b/pizzas/1_grilled_chicken_green_bell_peppers_tomato.html
@@ -16,16 +16,16 @@ title: Grilled chicken, green bell peppers, tomatoes, and kalamata olives with g
           <h4>Ingredients</h4>
           <ul>
 <li>
-              <a href="/ingredients/2_green_bell_peppers.html">Green bell peppers</a>
+              Green bell peppers
             </li>
             <li>
-              <a href="/ingredients/1_grilled_chicken.html">Grilled chicken</a>
+              Grilled chicken
             </li>
             <li>
-              <a href="/ingredients/4_kalamata_olives.html">Kalamata olives</a>
+              Kalamata olives
             </li>
             <li>
-              <a href="/ingredients/3_tomatoes.html">Tomatoes</a>
+              Tomatoes
             </li>
           </ul>
 <h4>Description</h4>
