--- a/pizzas/21_mozzarella_chicken_green_bell_peppers_whi.html
+++ b/pizzas/21_mozzarella_chicken_green_bell_peppers_whi.html
@@ -16,19 +16,19 @@ title: Mozzarella, chicken, green bell peppers, white onions, and whole wheat cr
           <h4>Ingredients</h4>
           <ul>
 <li>
-              <a href="/ingredients/24_chicken.html">Chicken</a>
+              Chicken
             </li>
             <li>
-              <a href="/ingredients/2_green_bell_peppers.html">Green bell peppers</a>
+              Green bell peppers
             </li>
             <li>
-              <a href="/ingredients/20_mozzarella.html">Mozzarella</a>
+              Mozzarella
             </li>
             <li>
-              <a href="/ingredients/34_white_onions.html">White onions</a>
+              White onions
             </li>
             <li>
-              <a href="/ingredients/12_whole_wheat_crust.html">Whole wheat crust</a>
+              Whole wheat crust
             </li>
           </ul>
 <h4>Description</h4>
