--- a/pizzas/22_fresh_spinach_mozzarella_and_kalamata_oli.html
+++ b/pizzas/22_fresh_spinach_mozzarella_and_kalamata_oli.html
@@ -16,16 +16,16 @@ title: Fresh spinach, mozzarella, kalamata olives, and whole wheat crust with ma
           <h4>Ingredients</h4>
           <ul>
 <li>
-              <a href="/ingredients/32_fresh_spinach.html">Fresh spinach</a>
+              Fresh spinach
             </li>
             <li>
-              <a href="/ingredients/4_kalamata_olives.html">Kalamata olives</a>
+              Kalamata olives
             </li>
             <li>
-              <a href="/ingredients/20_mozzarella.html">Mozzarella</a>
+              Mozzarella
             </li>
             <li>
-              <a href="/ingredients/12_whole_wheat_crust.html">Whole wheat crust</a>
+              Whole wheat crust
             </li>
           </ul>
 <h4>Description</h4>
