--- a/pizzas/23_artichoke_hearts_red_bell_peppers_and_mus.html
+++ b/pizzas/23_artichoke_hearts_red_bell_peppers_and_mus.html
@@ -16,16 +16,16 @@ title: Artichoke hearts, red bell peppers, mushrooms, and whole wheat crust with
           <h4>Ingredients</h4>
           <ul>
 <li>
-              <a href="/ingredients/31_artichoke_hearts.html">Artichoke hearts</a>
+              Artichoke hearts
             </li>
             <li>
-              <a href="/ingredients/19_mushrooms.html">Mushrooms</a>
+              Mushrooms
             </li>
             <li>
-              <a href="/ingredients/16_red_bell_peppers.html">Red bell peppers</a>
+              Red bell peppers
             </li>
             <li>
-              <a href="/ingredients/12_whole_wheat_crust.html">Whole wheat crust</a>
+              Whole wheat crust
             </li>
           </ul>
 <h4>Description</h4>
