--- a/pizzas/24_fresh_basil_and_fresh_mozzarella_whole_wh.html
+++ b/pizzas/24_fresh_basil_and_fresh_mozzarella_whole_wh.html
@@ -16,13 +16,13 @@ title: Fresh basil, fresh mozzarella, and whole wheat crust with marinara
           <h4>Ingredients</h4>
           <ul>
 <li>
-              <a href="/ingredients/29_fresh_basil.html">Fresh basil</a>
+              Fresh basil
             </li>
             <li>
-              <a href="/ingredients/33_fresh_mozzarella.html">Fresh mozzarella</a>
+              Fresh mozzarella
             </li>
             <li>
-              <a href="/ingredients/12_whole_wheat_crust.html">Whole wheat crust</a>
+              Whole wheat crust
             </li>
           </ul>
 <h4>Description</h4>
