--- a/pizzas/25_mozzarella_broccoli_and_roma_tomatoes_who.html
+++ b/pizzas/25_mozzarella_broccoli_and_roma_tomatoes_who.html
@@ -16,16 +16,16 @@ title: Mozzarella, broccoli, roma tomatoes, and whole wheat crust with marinara
           <h4>Ingredients</h4>
           <ul>
 <li>
-              <a href="/ingredients/35_broccoli.html">Broccoli</a>
+              Broccoli
             </li>
             <li>
-              <a href="/ingredients/20_mozzarella.html">Mozzarella</a>
+              Mozzarella
             </li>
             <li>
-              <a href="/ingredients/28_roma_tomatoes.html">Roma tomatoes</a>
+              Roma tomatoes
             </li>
             <li>
-              <a href="/ingredients/12_whole_wheat_crust.html">Whole wheat crust</a>
+              Whole wheat crust
             </li>
           </ul>
 <h4>Description</h4>
