--- a/pizzas/27_sundried_tomatoes_fresh_mozzarella_and_sa.html
+++ b/pizzas/27_sundried_tomatoes_fresh_mozzarella_and_sa.html
@@ -16,13 +16,13 @@ title: Sun-dried tomatoes, fresh mozzarella, and sauteed onions with rosemary ga
           <h4>Ingredients</h4>
           <ul>
 <li>
-              <a href="/ingredients/33_fresh_mozzarella.html">Fresh mozzarella</a>
+              Fresh mozzarella
             </li>
             <li>
-              <a href="/ingredients/37_sauteed_onions.html">Sauteed onions</a>
+              Sauteed onions
             </li>
             <li>
-              <a href="/ingredients/22_sundried_tomatoes.html">Sun-dried tomatoes</a>
+              Sun-dried tomatoes
             </li>
           </ul>
 <h4>Description</h4>
