--- a/pizzas/28_mozzarella_pineapple_goat_cheese_and_gree.html
+++ b/pizzas/28_mozzarella_pineapple_goat_cheese_and_gree.html
@@ -16,16 +16,16 @@ title: Mozzarella, pineapple, goat cheese, and green bell peppers with garlic bu
   <h4>Ingredients</h4>
   <ul>
 <li>
-      <a href="/ingredients/9_goat_cheese.html">Goat cheese</a>
+      Goat cheese
     </li>
     <li>
-      <a href="/ingredients/2_green_bell_peppers.html">Green bell peppers</a>
+      Green bell peppers
     </li>
     <li>
-      <a href="/ingredients/20_mozzarella.html">Mozzarella</a>
+      Mozzarella
     </li>
     <li>
-      <a href="/ingredients/18_pineapple.html">Pineapple</a>
+      Pineapple
     </li>
   </ul>
 <h4>Description</h4>
