--- a/pizzas/29_oregano_mozzarella_portabella_mushrooms_a.html
+++ b/pizzas/29_oregano_mozzarella_portabella_mushrooms_a.html
@@ -16,16 +16,16 @@ title: Oregano, mozzarella, portabella mushrooms, and vine-ripened tomatoes with
   <h4>Ingredients</h4>
   <ul>
 <li>
-      <a href="/ingredients/20_mozzarella.html">Mozzarella</a>
+      Mozzarella
     </li>
     <li>
-      <a href="/ingredients/14_oregano.html">Oregano</a>
+      Oregano
     </li>
     <li>
-      <a href="/ingredients/38_portabella_mushrooms.html">Portabella mushrooms</a>
+      Portabella mushrooms
     </li>
     <li>
-      <a href="/ingredients/11_vineripened_tomatoes.html">Vine-ripened tomatoes</a>
+      Vine-ripened tomatoes
     </li>
   </ul>
 <h4>Description</h4>
