--- a/pizzas/2_heirloom_tomatoes_green_bell_peppers_zucc.html
+++ b/pizzas/2_heirloom_tomatoes_green_bell_peppers_zucc.html
@@ -16,25 +16,25 @@ title: Heirloom tomatoes, green bell peppers, zucchini, pork and wild rice sausa
   <h4>Ingredients</h4>
   <ul>
 <li>
-      <a href="/ingredients/10_brie.html">Brie</a>
+      Brie
     </li>
     <li>
-      <a href="/ingredients/9_goat_cheese.html">Goat cheese</a>
+      Goat cheese
     </li>
     <li>
-      <a href="/ingredients/2_green_bell_peppers.html">Green bell peppers</a>
+      Green bell peppers
     </li>
     <li>
-      <a href="/ingredients/5_heirloom_tomatoes.html">Heirloom tomatoes</a>
+      Heirloom tomatoes
     </li>
     <li>
-      <a href="/ingredients/7_pork_and_wild_rice_sausage.html">Pork and wild rice sausage</a>
+      Pork and wild rice sausage
     </li>
     <li>
-      <a href="/ingredients/8_red_onions.html">Red onions</a>
+      Red onions
     </li>
     <li>
-      <a href="/ingredients/6_zucchini.html">Zucchini</a>
+      Zucchini
     </li>
   </ul>
 <h4>Description</h4>
