--- a/pizzas/35_tomatoes_pepperoni_capers_red_onions.html
+++ b/pizzas/35_tomatoes_pepperoni_capers_red_onions.html
@@ -16,16 +16,16 @@ title: Capers, pepperoni, red onions, and vine-ripened tomatoes with garlic butt
           <h4>Ingredients</h4>
           <ul>
 <li>
-              <a href="/ingredients/27_capers.html">Capers</a>
+              Capers
             </li>
             <li>
-              <a href="/ingredients/30_pepperoni.html">Pepperoni</a>
+              Pepperoni
             </li>
             <li>
-              <a href="/ingredients/8_red_onions.html">Red onions</a>
+              Red onions
             </li>
             <li>
-              <a href="/ingredients/11_vineripened_tomatoes.html">Vine-ripened tomatoes</a>
+              Vine-ripened tomatoes
             </li>
           </ul>
 <h4>Description</h4>
