--- a/pizzas/36_ground_turkey_poblano_peppers_cheddar_cil.html
+++ b/pizzas/36_ground_turkey_poblano_peppers_cheddar_cil.html
@@ -16,22 +16,22 @@ title: Cheddar cheese, fresh cilantro, ground turkey, mozzarella, roasted poblan
   <h4>Ingredients</h4>
   <ul>
 <li>
-      <a href="/ingredients/42_cheddar_cheese.html">Cheddar cheese</a>
+      Cheddar cheese
     </li>
     <li>
-      <a href="/ingredients/41_fresh_cilantro.html">Fresh cilantro</a>
+      Fresh cilantro
     </li>
     <li>
-      <a href="/ingredients/40_ground_turkey.html">Ground turkey</a>
+      Ground turkey
     </li>
     <li>
-      <a href="/ingredients/20_mozzarella.html">Mozzarella</a>
+      Mozzarella
     </li>
     <li>
-      <a href="/ingredients/43_roasted_poblano_peppers.html">Roasted poblano peppers</a>
+      Roasted poblano peppers
     </li>
     <li>
-      <a href="/ingredients/11_vineripened_tomatoes.html">Vine-ripened tomatoes</a>
+      Vine-ripened tomatoes
     </li>
   </ul>
 <h4>Description</h4>
