--- a/pizzas/37_kale_sweet_potato_red_onion_and_garlicinf.html
+++ b/pizzas/37_kale_sweet_potato_red_onion_and_garlicinf.html
@@ -16,13 +16,13 @@ title: Kale, red onions, and sweet potatoes with garlic olive oil
           <h4>Ingredients</h4>
           <ul>
 <li>
-              <a href="/ingredients/44_kale.html">Kale</a>
+              Kale
             </li>
             <li>
-              <a href="/ingredients/8_red_onions.html">Red onions</a>
+              Red onions
             </li>
             <li>
-              <a href="/ingredients/45_sweet_potatoes.html">Sweet potatoes</a>
+              Sweet potatoes
             </li>
           </ul>
 <h4>Description</h4>
