--- a/pizzas/39_kale_tomatoes_kalamata_olives_and_feta.html
+++ b/pizzas/39_kale_tomatoes_kalamata_olives_and_feta.html
@@ -16,16 +16,16 @@ title: Feta cheese, heirloom tomatoes, kalamata olives, and kale with garlic but
           <h4>Ingredients</h4>
           <ul>
 <li>
-              <a href="/ingredients/47_feta_cheese.html">Feta cheese</a>
+              Feta cheese
             </li>
             <li>
-              <a href="/ingredients/5_heirloom_tomatoes.html">Heirloom tomatoes</a>
+              Heirloom tomatoes
             </li>
             <li>
-              <a href="/ingredients/4_kalamata_olives.html">Kalamata olives</a>
+              Kalamata olives
             </li>
             <li>
-              <a href="/ingredients/44_kale.html">Kale</a>
+              Kale
             </li>
           </ul>
 <h4>Description</h4>
