--- a/pizzas/3_heirloom_tomatoes_zucchini_red_onions_and.html
+++ b/pizzas/3_heirloom_tomatoes_zucchini_red_onions_and.html
@@ -16,16 +16,16 @@ title: Heirloom tomatoes, zucchini, red onions, and green bell peppers with garl
           <h4>Ingredients</h4>
           <ul>
 <li>
-              <a href="/ingredients/2_green_bell_peppers.html">Green bell peppers</a>
+              Green bell peppers
             </li>
             <li>
-              <a href="/ingredients/5_heirloom_tomatoes.html">Heirloom tomatoes</a>
+              Heirloom tomatoes
             </li>
             <li>
-              <a href="/ingredients/8_red_onions.html">Red onions</a>
+              Red onions
             </li>
             <li>
-              <a href="/ingredients/6_zucchini.html">Zucchini</a>
+              Zucchini
             </li>
           </ul>
 <h4>Description</h4>
