--- a/pizzas/40_shrimp_italian_sausage_roasted_red_pepper.html
+++ b/pizzas/40_shrimp_italian_sausage_roasted_red_pepper.html
@@ -16,16 +16,16 @@ title: Italian sausage, jumbo shrimp, kalamata olives, and roasted red peppers w
           <h4>Ingredients</h4>
           <ul>
 <li>
-              <a href="/ingredients/48_italian_sausage.html">Italian sausage</a>
+              Italian sausage
             </li>
             <li>
-              <a href="/ingredients/46_jumbo_shrimp.html">Jumbo shrimp</a>
+              Jumbo shrimp
             </li>
             <li>
-              <a href="/ingredients/4_kalamata_olives.html">Kalamata olives</a>
+              Kalamata olives
             </li>
             <li>
-              <a href="/ingredients/21_roasted_red_peppers.html">Roasted red peppers</a>
+              Roasted red peppers
             </li>
           </ul>
 <h4>Description</h4>
