--- a/pizzas/41_green_bell_peppers_jalapenos_and_pineappl.html
+++ b/pizzas/41_green_bell_peppers_jalapenos_and_pineappl.html
@@ -16,13 +16,13 @@ title: Green bell peppers, jalapeños, and pineapple with garlic butter
           <h4>Ingredients</h4>
           <ul>
 <li>
-              <a href="/ingredients/2_green_bell_peppers.html">Green bell peppers</a>
+              Green bell peppers
             </li>
             <li>
-              <a href="/ingredients/39_jalapeos.html">Jalapeños</a>
+              Jalapeños
             </li>
             <li>
-              <a href="/ingredients/18_pineapple.html">Pineapple</a>
+              Pineapple
             </li>
           </ul>
 <h4>Description</h4>
