--- a/pizzas/43_heart_pizza__valentines_day_.html
+++ b/pizzas/43_heart_pizza__valentines_day_.html
@@ -16,16 +16,16 @@ title: Goat cheese, pepperoni, pineapple, and roasted poblano peppers with garli
           <h4>Ingredients</h4>
           <ul>
 <li>
-              <a href="/ingredients/9_goat_cheese.html">Goat cheese</a>
+              Goat cheese
             </li>
             <li>
-              <a href="/ingredients/30_pepperoni.html">Pepperoni</a>
+              Pepperoni
             </li>
             <li>
-              <a href="/ingredients/18_pineapple.html">Pineapple</a>
+              Pineapple
             </li>
             <li>
-              <a href="/ingredients/43_roasted_poblano_peppers.html">Roasted poblano peppers</a>
+              Roasted poblano peppers
             </li>
           </ul>
 <h4>Description</h4>
