--- a/pizzas/4_kalamata_olives_vineripened_tomatoes_goat.html
+++ b/pizzas/4_kalamata_olives_vineripened_tomatoes_goat.html
@@ -16,16 +16,16 @@ title: Kalamata olives, vine-ripened tomatoes, goat cheese, and whole wheat crus
           <h4>Ingredients</h4>
           <ul>
 <li>
-              <a href="/ingredients/9_goat_cheese.html">Goat cheese</a>
+              Goat cheese
             </li>
             <li>
-              <a href="/ingredients/4_kalamata_olives.html">Kalamata olives</a>
+              Kalamata olives
             </li>
             <li>
-              <a href="/ingredients/11_vineripened_tomatoes.html">Vine-ripened tomatoes</a>
+              Vine-ripened tomatoes
             </li>
             <li>
-              <a href="/ingredients/12_whole_wheat_crust.html">Whole wheat crust</a>
+              Whole wheat crust
             </li>
           </ul>
 <h4>Description</h4>
