--- a/pizzas/5_zucchini_roasted_garlic_oregano_parsley_w.html
+++ b/pizzas/5_zucchini_roasted_garlic_oregano_parsley_w.html
@@ -16,19 +16,19 @@ title: Zucchini, roasted garlic, oregano, parsley, and whole wheat crust with ga
           <h4>Ingredients</h4>
           <ul>
 <li>
-              <a href="/ingredients/14_oregano.html">Oregano</a>
+              Oregano
             </li>
             <li>
-              <a href="/ingredients/15_parsley.html">Parsley</a>
+              Parsley
             </li>
             <li>
-              <a href="/ingredients/13_roasted_garlic.html">Roasted garlic</a>
+              Roasted garlic
             </li>
             <li>
-              <a href="/ingredients/12_whole_wheat_crust.html">Whole wheat crust</a>
+              Whole wheat crust
             </li>
             <li>
-              <a href="/ingredients/6_zucchini.html">Zucchini</a>
+              Zucchini
             </li>
           </ul>
 <h4>Description</h4>
