--- a/pizzas/6_green_bell_peppers_red_bell_peppers_onion.html
+++ b/pizzas/6_green_bell_peppers_red_bell_peppers_onion.html
@@ -16,13 +16,13 @@ title: Green bell peppers, red bell peppers, and onion with marinara
           <h4>Ingredients</h4>
           <ul>
 <li>
-              <a href="/ingredients/2_green_bell_peppers.html">Green bell peppers</a>
+              Green bell peppers
             </li>
             <li>
-              <a href="/ingredients/17_onion.html">Onion</a>
+              Onion
             </li>
             <li>
-              <a href="/ingredients/16_red_bell_peppers.html">Red bell peppers</a>
+              Red bell peppers
             </li>
           </ul>
 <h4>Description</h4>
