--- a/pizzas/7_pineapple_green_bell_peppers_kalamata_oli.html
+++ b/pizzas/7_pineapple_green_bell_peppers_kalamata_oli.html
@@ -16,19 +16,19 @@ title: Pineapple, green bell peppers, kalamata olives, mushrooms, and red onions
           <h4>Ingredients</h4>
           <ul>
 <li>
-              <a href="/ingredients/2_green_bell_peppers.html">Green bell peppers</a>
+              Green bell peppers
             </li>
             <li>
-              <a href="/ingredients/4_kalamata_olives.html">Kalamata olives</a>
+              Kalamata olives
             </li>
             <li>
-              <a href="/ingredients/19_mushrooms.html">Mushrooms</a>
+              Mushrooms
             </li>
             <li>
-              <a href="/ingredients/18_pineapple.html">Pineapple</a>
+              Pineapple
             </li>
             <li>
-              <a href="/ingredients/8_red_onions.html">Red onions</a>
+              Red onions
             </li>
           </ul>
 <h4>Description</h4>
