--- a/pizzas/9_green_bell_peppers_pineapple_chicken_red_.html
+++ b/pizzas/9_green_bell_peppers_pineapple_chicken_red_.html
@@ -16,19 +16,19 @@ title: Green bell peppers, pineapple, chicken, red onions, and goat cheese with 
   <h4>Ingredients</h4>
   <ul>
 <li>
-      <a href="/ingredients/24_chicken.html">Chicken</a>
+      Chicken
     </li>
     <li>
-      <a href="/ingredients/9_goat_cheese.html">Goat cheese</a>
+      Goat cheese
     </li>
     <li>
-      <a href="/ingredients/2_green_bell_peppers.html">Green bell peppers</a>
+      Green bell peppers
     </li>
     <li>
-      <a href="/ingredients/18_pineapple.html">Pineapple</a>
+      Pineapple
     </li>
     <li>
-      <a href="/ingredients/8_red_onions.html">Red onions</a>
+      Red onions
     </li>
   </ul>
 <h4>Description</h4>
