--- a/pizzas/12_mozzarella_and_roma_tomatoes.html
+++ b/pizzas/12_mozzarella_and_roma_tomatoes.html
@@ -16,10 +16,10 @@ title: Mozzarella and roma tomatoes with marinara
           <h4>Ingredients</h4>
           <ul>
 <li>
-              <a href="/ingredients/20_mozzarella.html">Mozzarella</a>
+              Mozzarella
             </li>
             <li>
-              <a href="/ingredients/28_roma_tomatoes.html">Roma tomatoes</a>
+              Roma tomatoes
             </li>
           </ul>
 <h4>Description</h4>
