--- a/pizzas/14_fresh_basil_mozzarella_bell_peppers_and_h.html
+++ b/pizzas/14_fresh_basil_mozzarella_bell_peppers_and_h.html
@@ -16,16 +16,16 @@ title: Fresh basil, mozzarella, bell peppers, and heirloom tomatoes with garlic 
   <h4>Ingredients</h4>
   <ul>
 <li>
-      <a href="/ingredients/25_bell_peppers.html">Bell peppers</a>
+      Bell peppers
     </li>
     <li>
-      <a href="/ingredients/29_fresh_basil.html">Fresh basil</a>
+      Fresh basil
     </li>
     <li>
-      <a href="/ingredients/5_heirloom_tomatoes.html">Heirloom tomatoes</a>
+      Heirloom tomatoes
     </li>
     <li>
-      <a href="/ingredients/20_mozzarella.html">Mozzarella</a>
+      Mozzarella
     </li>
   </ul>
 <h4>Description</h4>
