--- a/pizzas/20_fresh_spinach_mozzarella_and_kalamata_oli.html
+++ b/pizzas/20_fresh_spinach_mozzarella_and_kalamata_oli.html
@@ -16,13 +16,13 @@ title: Fresh spinach, mozzarella, and kalamata olives with marinara
           <h4>Ingredients</h4>
           <ul>
 <li>
-              <a href="/ingredients/32_fresh_spinach.html">Fresh spinach</a>
+              Fresh spinach
             </li>
             <li>
-              <a href="/ingredients/4_kalamata_olives.html">Kalamata olives</a>
+              Kalamata olives
             </li>
             <li>
-              <a href="/ingredients/20_mozzarella.html">Mozzarella</a>
+              Mozzarella
             </li>
           </ul>
 <h4>Description</h4>
