--- a/pizzas/26_ham_pineapple_green_bell_peppers_mozzarel.html
+++ b/pizzas/26_ham_pineapple_green_bell_peppers_mozzarel.html
@@ -16,19 +16,19 @@ title: Ham, pineapple, green bell peppers, mozzarella, and goat cheese with garl
   <h4>Ingredients</h4>
   <ul>
 <li>
-      <a href="/ingredients/9_goat_cheese.html">Goat cheese</a>
+      Goat cheese
     </li>
     <li>
-      <a href="/ingredients/2_green_bell_peppers.html">Green bell peppers</a>
+      Green bell peppers
     </li>
     <li>
-      <a href="/ingredients/36_ham.html">Ham</a>
+      Ham
     </li>
     <li>
-      <a href="/ingredients/20_mozzarella.html">Mozzarella</a>
+      Mozzarella
     </li>
     <li>
-      <a href="/ingredients/18_pineapple.html">Pineapple</a>
+      Pineapple
     </li>
   </ul>
 <h4>Description</h4>
