--- a/pizzas/30_sundried_tomatoes_mozzarella_roasted_red_.html
+++ b/pizzas/30_sundried_tomatoes_mozzarella_roasted_red_.html
@@ -16,16 +16,16 @@ title: Sun-dried tomatoes, mozzarella, roasted red peppers, and kalamata olives 
   <h4>Ingredients</h4>
   <ul>
 <li>
-      <a href="/ingredients/4_kalamata_olives.html">Kalamata olives</a>
+      Kalamata olives
     </li>
     <li>
-      <a href="/ingredients/20_mozzarella.html">Mozzarella</a>
+      Mozzarella
     </li>
     <li>
-      <a href="/ingredients/21_roasted_red_peppers.html">Roasted red peppers</a>
+      Roasted red peppers
     </li>
     <li>
-      <a href="/ingredients/22_sundried_tomatoes.html">Sun-dried tomatoes</a>
+      Sun-dried tomatoes
     </li>
   </ul>
 <h4>Description</h4>
