--- a/pizzas/32_roma_tomatoes_green_bell_peppers_mozzarel.html
+++ b/pizzas/32_roma_tomatoes_green_bell_peppers_mozzarel.html
@@ -16,13 +16,13 @@ title: Roma tomatoes, green bell peppers, and mozzarella with marinara
           <h4>Ingredients</h4>
           <ul>
 <li>
-              <a href="/ingredients/2_green_bell_peppers.html">Green bell peppers</a>
+              Green bell peppers
             </li>
             <li>
-              <a href="/ingredients/20_mozzarella.html">Mozzarella</a>
+              Mozzarella
             </li>
             <li>
-              <a href="/ingredients/28_roma_tomatoes.html">Roma tomatoes</a>
+              Roma tomatoes
             </li>
           </ul>
 <h4>Description</h4>
