--- a/pizzas/33_pineapple_ham_mozzarella.html
+++ b/pizzas/33_pineapple_ham_mozzarella.html
@@ -16,13 +16,13 @@ title: Pineapple, ham, and mozzarella with garlic butter
           <h4>Ingredients</h4>
           <ul>
 <li>
-              <a href="/ingredients/36_ham.html">Ham</a>
+              Ham
             </li>
             <li>
-              <a href="/ingredients/20_mozzarella.html">Mozzarella</a>
+              Mozzarella
             </li>
             <li>
-              <a href="/ingredients/18_pineapple.html">Pineapple</a>
+              Pineapple
             </li>
           </ul>
 <h4>Description</h4>
