--- a/pizzas/34_barbeque_chicken_jalapenos_and_tomatoes.html
+++ b/pizzas/34_barbeque_chicken_jalapenos_and_tomatoes.html
@@ -16,16 +16,16 @@ title: Grilled chicken, jalapeños, pepperoni, and tomatoes with garlic butter
   <h4>Ingredients</h4>
   <ul>
 <li>
-      <a href="/ingredients/1_grilled_chicken.html">Grilled chicken</a>
+      Grilled chicken
     </li>
     <li>
-      <a href="/ingredients/39_jalapeos.html">Jalapeños</a>
+      Jalapeños
     </li>
     <li>
-      <a href="/ingredients/30_pepperoni.html">Pepperoni</a>
+      Pepperoni
     </li>
     <li>
-      <a href="/ingredients/3_tomatoes.html">Tomatoes</a>
+      Tomatoes
     </li>
   </ul>
 <h4>Description</h4>
