--- a/pizzas/8_mozzarella_roasted_red_peppers_sundried_t.html
+++ b/pizzas/8_mozzarella_roasted_red_peppers_sundried_t.html
@@ -16,22 +16,22 @@ title: Mozzarella, roasted red peppers, sun-dried tomatoes, red onions, kalamata
           <h4>Ingredients</h4>
           <ul>
 <li>
-              <a href="/ingredients/4_kalamata_olives.html">Kalamata olives</a>
+              Kalamata olives
             </li>
             <li>
-              <a href="/ingredients/20_mozzarella.html">Mozzarella</a>
+              Mozzarella
             </li>
             <li>
-              <a href="/ingredients/8_red_onions.html">Red onions</a>
+              Red onions
             </li>
             <li>
-              <a href="/ingredients/21_roasted_red_peppers.html">Roasted red peppers</a>
+              Roasted red peppers
             </li>
             <li>
-              <a href="/ingredients/22_sundried_tomatoes.html">Sun-dried tomatoes</a>
+              Sun-dried tomatoes
             </li>
             <li>
-              <a href="/ingredients/23_thin_crust.html">Thin crust</a>
+              Thin crust
             </li>
           </ul>
 <h4>Description</h4>
