remove dead link

--- a/index.html
+++ b/index.html
@@ -45,10 +45,7 @@ title: BillyReisinger.com
           <a href="pizza_advanced.html">Advanced Pizza Tips</a>
         </li>
         <li>
-          <a href="pizza_log.html">Pizza Recipes and Topping Ideas</a>
-        </li>
-        <li>
-          <a href="/pizza_ingredients.html">Pizza Ideas by Ingredient</a>
+          <a href="pizza_log.html">Pictures of Pizzas I've Made</a>
         </li>
         <li>
           <a href="pizza_dough_form.html">How to Form a Pizza Crust (movie)</a>
