move to responsive ad

--- a/pizza_advanced.html
+++ b/pizza_advanced.html
@@ -15,6 +15,7 @@ title: Pizza Tips
     confused about what type of flour to use, and where to find the
     kind of yeast to make a good pizza.
   </p>
+  {% include responsive_ad.html %}
   <h4>The Flour</h4>
   <p>
     Don't go out to the store and blow a wad of cash on some
