--- a/pizza_mistakes.html
+++ b/pizza_mistakes.html
@@ -21,6 +21,7 @@ title: Pizza Ideas By Ingredient
     Keep your pizza toppings down to about a half-inch (a centimeter) to prevent
     this situation.
   </p>
+  {% include responsive_ad.html %}
   <h3>Too much cheese</h3>
   <p>
     Putting too much cheese on your pizza is not only going to make the darn
