--- a/pizza_dough.html
+++ b/pizza_dough.html
@@ -6,15 +6,6 @@ title: How to Make Pizza Dough - The Ridiculously Thorough Guide To Making Your 
   <h2>
     How to Make Pizza Dough
   </h2>
-  <div class='floatRight webAd'>
-    <script>
-      google_ad_client = "ca-pub-0406430957368909";
-      google_ad_slot = "3030340251";
-      google_ad_width = 300;
-      google_ad_height = 250;
-    </script>
-    <script src='http://pagead2.googlesyndication.com/pagead/show_ads.js' type='text/javascript'></script>
-  </div>
   <p>This recipe will make enough dough for 1 large pizza or 2 small pizzas.</p>
   <h3>Ingredients</h3>
   <ul>
@@ -27,18 +18,8 @@ title: How to Make Pizza Dough - The Ridiculously Thorough Guide To Making Your 
       2 Cups - Flour (<a href='pizza_advanced.html'>what kind?</a>)
     </li>
   </ul>
+  {% include responsive_ad.html %}
   <h3>Make the dough</h3>
-  <div class='mobileAd'>
-    <script>
-      window.googleAfmcRequest = {
-                    client: 'ca-mb-pub-0406430957368909',
-                    format: '320x50_mb',
-                    output: 'html',
-                    slotname: '1119162397',
-      };
-    </script>
-    <script src='http://pagead2.googlesyndication.com/pagead/show_afmc_ads.js' type='text/javascript'></script>
-  </div>
   <ol>
     <li>
       First, it is important to mention that the measurements above are
@@ -76,15 +57,6 @@ title: How to Make Pizza Dough - The Ridiculously Thorough Guide To Making Your 
       optional to do so, and if you want, you can continue on to the next step.
     </li>
     <li>
-      <div class='floatRight webAd'>
-        <script>
-          google_ad_client = "ca-pub-0406430957368909";
-          google_ad_slot = "5625459697";
-          google_ad_width = 250;
-          google_ad_height = 250;
-        </script>
-        <script src='http://pagead2.googlesyndication.com/pagead/show_ads.js' type='text/javascript'></script>
-      </div>
       Now,
       <strong>add the salt and the olive oil.</strong>
       Continue by
