--- a/music.html
+++ b/music.html
@@ -29,16 +29,33 @@ title: BillyReisinger.com
     </div>
     <div class="piece">
         <h4>Pacific Dream Sequence (2001)</h4>
+        <p>A quintet for clarinet, violin, viola, cello, and double bass</p>
+        <a href='music/Pacific Dream Sequence/01 Octopi Yourself.mp3'>rfrac.mov</a>
+        <a href='music/Pacific Dream Sequence/02 Impossible Paradise.mp3'>rfrac.mov</a>
+        <a href='music/Pacific Dream Sequence/03 Sinking Stone.mp3'>rfrac.mov</a>
     </div>
     <div class="piece">
         <h4>Rondo for Rodent and Computer (2003)</h4>
+        <p>This is a video of the performance of a piece of electronic music that superimposed 
+           through-written music with live, dynamic music generated from a video feed
+           of a rodent.</p>
         <a href='music/rfrac/rfrac.mov'>rfrac.mov</a>
     </div>
     <div class="piece">
         <h4>Streetscapes for Solo Piano (2003)</h4>
+        <p>A set of 5 miniatures for piano, performed by Chryssie Nanou</p>
+        <a href='music/Streetscapes/01 01 Scenic Parkway.aif'>Scenic Parkway</a>
+        <a href='music/Streetscapes/02 02 Market Square.aif'>Market Square</a>
+        <a href='music/Streetscapes/03 03 Wet Night Alley.aif'>Wet Night Alley</a>
+        <a href='music/Streetscapes/04 04 Blizzard Impasse.aif'>Blizzard Impasse</a>
+        <a href='music/Streetscapes/05 05 Interstate Still-Life.aif'>Interstate Still-Life</a>
     </div>
     <div class="piece">
         <h4>String Quartet (2000)</h4>
+        <a href='music/String Quartet/01 Mov. I.mp3'>Mov. I</a>
+        <a href='music/String Quartet/02 Mov. II.mp3'>Mov. II</a>
+        <a href='music/String Quartet/03 Mov. III.mp3'>Mov. III</a>
+
     </div>
   </div>
   <div class="col-md-12">
