--- a/music.html
+++ b/music.html
@@ -39,7 +39,7 @@ title: BillyReisinger.com
         <p>This is a video of the performance of a piece of electronic music that superimposed 
            through-written music with live, dynamic music generated from a video feed
            of a rodent.</p>
-        <p><a href='music/rfrac/rfrac.mov'>rfrac.mov</a></p>
+        <p><iframe width="420" height="315" src="https://www.youtube.com/embed/PFPAxBEAstA" frameborder="0" allowfullscreen></iframe></p>
     </div>
     <div class="piece">
         <h4>Streetscapes for Solo Piano (2003)</h4>
