--- a/resume.html
+++ b/resume.html
@@ -23,13 +23,21 @@ title: BillyReisinger.com
     Lastly, I think that having a <a href="http://github.com/unclebilly/logpoop">sense of humor</a> about stuff helps you not die.
   </p>
   <h2>Experience</h2>
-  <b>Software Architect</b>&nbsp;-&nbsp;<a href='http://govdelivery.com'>GovDelivery</a>, St. Paul, MN (January 2009 - present)
+  <b>Software Architect</b>&nbsp;-&nbsp;<a href='http://govdelivery.com'>GovDelivery</a>, St. Paul, MN (April 2014 - present)
+  <ul>
+    <li>Developed with Ruby, Java, Oracle, JavaScript</li>
+    <li>Served as Lead engineer on a Scrum team of four engineers</li>
+    <li>Steered technology decisions as member of team leads</li>
+    <li>Mentored other engineers</li>
+  </ul>
+  <b>Senior Software Engineer</b>&nbsp;-&nbsp;<a href='http://govdelivery.com'>GovDelivery</a>, St. Paul, MN (January 2009 - March 2014)
   <ul>
     <li>Ground-up rewrite of an enterprise web application / message delivery system</li>
-    <li>Developed new tranasctional email, SMS, and voice messaging API</li>
+    <li>Developed new transactional email, SMS, and voice messaging API</li>
     <li>Developed company-wide analytics system using Kafka</li>
     <li>Developed with Ruby, Java, Oracle, JavaScript</li>
-    <li>Worked in a devops team to automate server configuration and provisioning using Foreman and Puppet</li>
+    <li>Worked in a devops team to implement server configuration and provisioning automation using Foreman and Puppet</li>
+    <li>Contributed several major features to open-source Oracle ActiveRecord adapter</li>
   </ul>
   <b>Senior Web Developer</b>&nbsp;-&nbsp;<a href='http://www.ibsys.com'>Internet Broadcasting Systems</a>, Minneapolis, MN (December, 2005 - December, 2008)
   <ul>
